# algonaut_ios

./: Cargo.toml  README.md
.github/workflows/: rust.yml
ios_app/: Rust-Bridging-Header.h  build-rust-xcode.sh
ios_app/core/: mobileapp-ios.h
ios_app/ios_app/: ContentView.swift  Core.swift  Info.plist  MyApp.swift  MyViewModel.swift
ios_app/ios_app.xcodeproj/: project.pbxproj
src/: dependencies.rs  ffi_ios.rs  lib.rs  provider.rs
