[package]
name = "algorand_rust_ios"
version = "0.0.1"
authors = ["Ivan Schuetz <ivanhp978@gmail.com>"]
edition = "2018"

[lib]
name = "core"
crate-type = ["staticlib"]

[dependencies]
log = "0.4.6"
log-panics = "2.0"
algonaut = "0.3.0"
anyhow = "1.0"
futures = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.40"
tokio = "1.6.1"
once_cell = "1.8.0"

[target.'cfg(target_os = "ios")'.dependencies]
libc = "0.2"
core-foundation = "0.6.2"

[build-dependencies]
env_logger = "0.6"
